package test;

syntax = "proto3";

import "msg_type.proto";

// 请求头部信息
message RequestHeadFrame {
    uint32 msg_type = 1;
    uint32 timestamp = 2;
}
// 请求结构
message RequestFrame {
    message GET_BASE_REQ {
        bool test = 1;
    }
    message GET_ERROR_REQ {
        bool test = 1;
    }
    GET_BASE_REQ get_base_req = 1;
    GET_ERROR_REQ get_error_req = 2;
}
// 响应结果结构
message ResponseResultFrame {
    uint32 code = 1;
    string msg = 2;
}
// 响应结构
message ResponseFrame {
    message GET_BASE_RES {
        bool test = 1;
    }
    GET_BASE_RES get_base_res = 1;
}
// 请求包结构
message RequestPackage {
    RequestHeadFrame head_frame = 1;
    RequestFrame request_frame = 2;
}
// 响应包结构
message ResponsePackage {
    ResponseResultFrame result_frame = 1;
    ResponseFrame response_frame = 2;
}

